[build-system]
requires = ["setuptools>=68", "wheel", "build"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-merge"
version = "0.0.1"
description = " Fuzzy Merging Algorithim using LLM"
authors = [{ name = "Taha Ibrahim Siddiqui", email = "taha.i.siddiQ@gmail.com", name = "Asad Tariq", email =  }]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
dependencies = [
  "pandas>=1.5",
  "tqdm>=4.66",
  "google-generativeai>=0.7"
]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent"
]

[project.urls]
Homepage = "https://github.com/yourname/ai-merge"
Issues = "https://github.com/yourname/ai-merge/issues"